Experimental: Add normalized strings to api
